--- a/index.html
+++ b/index.html
@@ -19,21 +19,12 @@
 				<p>Salt Lake City, Utah, USA.</p>
 			</header>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
-
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li><a href="https://www.linkedin.com/in/ingrid-ribeiro-phd-68b792198/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://github.com/ing-ribeiro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="ingridalmeidaribeiro@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 
