--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 			<header id="header">
 				<h1>Ingrid de A. Ribeiro</h1>
 				<p>Salt Lake City, Utah, USA.</p>
-			</header>
+            </header>
+            
+            <main id="main">
+                <p>Hello there! Welcome to my portfolio!</p>
+                <p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. I have a bachelor's degree in Computational Physics at Universidade Federal Fluminense (UFF), a master's and doctorate's degree in Physics at <a href="https://portal.ifi.unicamp.br/">Universidade Estadual de Campinas</a> (UNICAMP-IFGW). I have a lot of experience in solving problems using math, computing, and statistics. </p>
+            </main>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/ingrid-ribeiro-phd-68b792198/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 					<li><a href="https://github.com/ing-ribeiro" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="ingridalmeidaribeiro@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:ingridalmeidaribeiro@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 
