--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             
             <main id="main">
                 <p>Hello there! Welcome to my portfolio!</p>
-                <p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. I have a bachelor's degree in Computational Physics at Universidade Federal Fluminense (UFF), a master's and doctorate's degree in Physics at <a href="https://portal.ifi.unicamp.br/">Universidade Estadual de Campinas</a> (UNICAMP-IFGW). I have a lot of experience in solving problems using math, computing, and statistics. </p>
+                <p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English.</p>
+                <p>I spent 1 year and a half living in Canada, and I started living in the United States of America since September 2021. </p>
+                <p>I have a bachelor's degree in Computational Physics at Universidade Federal Fluminense (UFF), a master's and doctorate's degree in Physics at <a href="https://portal.ifi.unicamp.br/">Universidade Estadual de Campinas</a> (UNICAMP-IFGW). I have a lot of experience in solving problems using math, computing, and statistics. </p>
             </main>
 
 		<!-- Footer -->
