--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                   <p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. I started living in the USA since September 2021. I enjoy traveling abroad and learning about other cultures.</p>
                   
-                  <p>I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
+                  I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.
               </div>
             </div>
           </div>
