--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 <main class="content-wrapper">
   <header class="white-text-container section-container">
     <div class="text-center">
-      <h1>Hello world!</h1>
-      <h1>I am Ingrid. Welcome to my portfolio!</h1>
+      <h1>Hello world! I am Ingrid. Welcome to my portfolio!</h1>
       <p>Physicist, MSc, PhD, Data Scientist</p>
       <p>
         <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/in/ingrid-ribeiro-phd-68b792198/" title="">
@@ -55,7 +54,7 @@
 
                   <p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. I started living in the USA since September 2021. I enjoy traveling abroad and learning about other cultures.</p>
                   
-                  I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.
+                  <p>I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
               </div>
             </div>
           </div>
