--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Hello world!</h2>
+										<p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. <br />
+                                        I speak Portuguese and English. I enjoy traveling abroad and learning about other cultures.
+										</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
 								</div>
 							</section>
 
