--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hello world!</h2>
-										<p>Let me tell you a little bit about myself. I was born in Volta Redonda, RJ, Brazil. <br />
-                                        I speak Portuguese and English. I enjoy traveling abroad and learning about other cultures.
+										<p>Welcome to my portfolio!
 										</p>
 									</header>
-									<p>I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
+									<p>Let me tell you a little bit about myself. <br />
+                                    I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. <br />
+                                    I enjoy traveling abroad and learning about other cultures. <br />
+                                    I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
 								</div>
 							</section>
 
@@ -103,28 +105,6 @@
 											</div>
 										</article>
 									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
 								</div>
 							</section>
 
