--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
 								<div class="container">
 									<header class="major">
 										<h2>Hello world!</h2>
-										<p>Welcome to my portfolio!
-										</p>
 									</header>
 									<p>Let me tell you a little bit about myself. <br />
                                     I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. <br />
                                     I enjoy traveling abroad and learning about other cultures. <br />
                                     <br />
                                     I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
+                                    <header class="major">
+                                        <p>Education
+                                        </p>
+                                    </header>
+                                    
 								</div>
 							</section>
 
