--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
                                         <p>Education
                                         </p>
                                     </header>
-                                    
+                                    <p>Doctor in Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                    Master of Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                    Bachelor degree in Computational Physics, Universidade Federal Fluminense (UFF), Volta Redonda, RJ, Brazil
+                                    </p>
 								</div>
 							</section>
 
