--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+                        <li><a href="#two" class="active">Education</a></li>
+						<li><a href="#three">Things I Can Do</a></li>
+						<li><a href="#four">A Few Accomplishments</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -55,20 +56,27 @@
                                     I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. <br />
                                     I enjoy traveling abroad and learning about other cultures. <br />
                                     <br />
-                                    I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.</p>
-                                    <header class="major">
-                                        <p>Education
-                                        </p>
-                                    </header>
-                                    <p>Doctor in Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
-                                    Master of Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
-                                    Bachelor degree in Computational Physics, Universidade Federal Fluminense (UFF), Volta Redonda, RJ, Brazil
+                                    I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics.
+                                    <br />
+                                    I currently work at the University of Utah as a Postdoctoral Researcher.
                                     </p>
+                                    
 								</div>
 							</section>
+                            
+                            <!-- Two -->
+                                <section id="two">
+                                    <div class="container">
+                                        <h3>Education</h3>
+                                        <p>Doctor in Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                        Master of Science, Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                        Bachelor degree in Computational Physics, Universidade Federal Fluminense (UFF), Volta Redonda, RJ, Brazil
+                                        </p>
+                                    </div>
+                                </section>
 
-						<!-- Two -->
-							<section id="two">
+						<!-- Three -->
+							<section id="three">
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -83,8 +91,8 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three">
+						<!-- Four -->
+							<section id="four">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
