--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<h2>Hello world!</h2>
 									</header>
 									<p>Let me tell you a little bit about myself. <br />
-                                    I was born in Volta Redonda, RJ, Brazil. I speak Portuguese and English. <br />
+                                    I was born in Volta Redonda, Brazil. I speak Portuguese and English. <br />
                                     I enjoy traveling abroad and learning about other cultures. <br />
                                     <br />
                                     I am enthusiastic about Science in general, and I enjoy learning new stuff. I have a lot of experience in solving problems using math, computing, and statistics. I currently work at the department of Chemistry at the University of Utah as a Postdoctoral Researcher. I use molecular simulations, numerical modeling and theory to investigate the formation of ice on biological and non-biological surfaces.
@@ -65,15 +65,15 @@
                                 <section id="two">
                                     <div class="container">
                                         <h3>Education</h3>
-                                        <p>Doctor in Science
-                                        Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                        <p>Doctor in Science <br />
+                                        Universidade Estadual de Campinas (UNICAMP), Brazil <br />
                                         
-                                        Master of Science
-                                        Universidade Estadual de Campinas (UNICAMP), Campinas, SP, Brazil <br />
+                                        Master of Science <br />
+                                        Universidade Estadual de Campinas (UNICAMP), Brazil <br />
                                         
-                                        Bachelor degree in Computational Physics
-                                        Universidade Federal Fluminense (UFF), Volta Redonda, RJ, Brazil
-                                        Exchange student at the University of Manitoba, Winnipeg, MB, Canada
+                                        Bachelor degree in Computational Physics <br />
+                                        Universidade Federal Fluminense (UFF), Brazil <br />
+                                        Exchange student at the University of Manitoba, Canada <br />
                                         </p>
                                     </div>
                                 </section>
