--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<li><a href="#one" class="active">About</a></li>
                         <li><a href="#two" class="active">Education</a></li>
 						<li><a href="#three">Things I Can Do</a></li>
-						<li><a href="#four">A Few Accomplishments</a></li>
+						<li><a href="#four">Accomplishments</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -97,8 +97,8 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Accomplishments</h3>
+									<p>Publications in peer-reviewed journals</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
