--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
+										<li class="icon solid fa-code">Python, C++, C, LaTeX, HTML, Fortran</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
 										<li class="icon solid fa-coffee">Drink much coffee</li>
@@ -103,8 +103,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Is It Possible to Follow the Structural Evolution of Water in “No-Man’s Land” Using a Pulsed-Heating Procedure?</h4>
+												<p>Our study reveals that to probe the structure of water in “no-man’s land” with a pulsed-heating procedure, the cooling rates must be two orders faster than currently accessible to experiments.  </p>
 											</div>
 										</article>
 										<article>
