--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Advances in the study of supercooled water</h4>
+												<p>This is a topical review about the recent progress in the field of supercooled water. I was glad to contribute with the recent progress in the physics of ice-ice interfaces.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Effect of Sodium Chloride on Internal Quasi-Liquid Layers in Ice</h4>
+												<p>Our study shows how the presence of salt facilitates the mechanical deformation of ice.</p>
 											</div>
 										</article>
 									</div>
