--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
 									<p>Publications in peer-reviewed journals</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://pubs.acs.org/doi/full/10.1021/acs.jpclett.1c04106" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Is It Possible to Follow the Structural Evolution of Water in “No-Man’s Land” Using a Pulsed-Heating Procedure?</h4>
 												<p>Our study reveals that to probe the structure of water in “no-man’s land” with a pulsed-heating procedure, the cooling rates must be two orders faster than currently accessible to experiments.  </p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://link.springer.com/article/10.1140/epje/s10189-021-00139-1" class="image"><img src="images/pic02.png" alt="" /></a>
 											<div class="inner">
 												<h4>Advances in the study of supercooled water</h4>
 												<p>This is a topical review about the recent progress in the field of supercooled water. I was glad to contribute with the recent progress in the physics of ice-ice interfaces.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://pubs.acs.org/doi/full/10.1021/acs.jpcc.1c05461" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Effect of Sodium Chloride on Internal Quasi-Liquid Layers in Ice</h4>
 												<p>Our study shows how the presence of salt facilitates the mechanical deformation of ice.</p>
