--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Python (Ovito, Matplotlib, NumPy, SciPy, pandas) </li>
-                                        <li class="icon solid fa-code">C++, C, LaTeX, HTML, Fortran</li>
+										<li class="icon solid fa-code">Python <br />
+                                            (Ovito, Matplotlib, NumPy, SciPy, pandas) </li>
+                                        <li class="icon solid fa-code">C++, C, LaTeX, HTML, Fortran, Gnuplot</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
 										<li class="icon solid fa-typewriter">Technical and academic writing</li>
 									</ul>
